--- a/Source/Stride/Stride.csproj
+++ b/Source/Stride/Stride.csproj
@@ -81,7 +81,10 @@
     <Compile Include="MusicDrawing\MusicDrawingBuilder.cs" />
     <Compile Include="MusicDrawing\MusicSymbolToFontText.cs" />
     <Compile Include="Input\NoteInput.cs" />
+    <Compile Include="Music\Note.cs" />
+    <Compile Include="Music\Octave.cs" />
     <Compile Include="Music\Pitch.cs" />
+    <Compile Include="Music\PitchLiterals.cs" />
     <Compile Include="Root.cs" />
     <Compile Include="MusicDrawing\StaffGeometryBuilder.cs" />
     <Compile Include="DrillControl.xaml.cs">
@@ -96,6 +99,7 @@
     <Compile Include="Utility\Combinator.cs" />
     <Compile Include="Utility\DoubleExtensions.cs" />
     <Compile Include="Utility\EnumerableExtensions.cs" />
+    <Compile Include="Utility\Hash.cs" />
     <Compile Include="Utility\NullableExtensions.cs" />
     <Compile Include="Utility\ObjectExtensions.cs" />
     <Compile Include="Utility\WeighedDistribution.cs" />
