--- a/Source/Stride/Stride.csproj
+++ b/Source/Stride/Stride.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MusicDrawing\LedgerLinesComputation.cs" />
     <Compile Include="MusicDrawing\StaffPosition.cs" />
     <Compile Include="MusicDrawing\StavesMetrics.cs" />
     <Compile Include="Input\MidiPitchMapping.cs" />
@@ -103,6 +104,7 @@
     <Compile Include="Utility\DoubleExtensions.cs" />
     <Compile Include="Utility\EnumerableExtensions.cs" />
     <Compile Include="Utility\Hash.cs" />
+    <Compile Include="Utility\IntExtensions.cs" />
     <Compile Include="Utility\NullableExtensions.cs" />
     <Compile Include="Utility\ObjectExtensions.cs" />
     <Compile Include="Utility\WeighedDistribution.cs" />
