--- a/Source/Gui/Properties/Settings.settings
+++ b/Source/Gui/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Stride.Gui.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="NoteInputMode" Type="Stride.Gui.Input.NoteInputMode" Scope="User">
+      <Value Profile="(Default)">Midi</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
