--- a/Source/Music/Music.csproj
+++ b/Source/Music/Music.csproj
@@ -35,11 +35,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Layout\Layout.cs" />
+    <Compile Include="Layout\LayoutEngine.cs" />
+    <Compile Include="Layout\LayoutObject.cs" />
+    <Compile Include="Layout\LineObject.cs" />
+    <Compile Include="Layout\StaffLinesBuilder.cs" />
+    <Compile Include="Layout\SymbolObject.cs" />
     <Compile Include="Presentation\GrandStaffLedgerLines.cs" />
     <Compile Include="Presentation\LedgerLines.cs" />
     <Compile Include="Presentation\LedgerLinesComputation.cs" />
     <Compile Include="Presentation\StaffPosition.cs" />
     <Compile Include="Layout\StavesMetrics.cs" />
+    <Compile Include="Presentation\Symbol.cs" />
     <Compile Include="Theory\Clef.cs" />
     <Compile Include="Theory\Const.cs" />
     <Compile Include="Theory\Note.cs" />
