--- a/Source/Gui/Gui.csproj
+++ b/Source/Gui/Gui.csproj
@@ -45,6 +45,9 @@
     <Reference Include="NAudio, Version=1.8.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NAudio.1.8.3\lib\net35\NAudio.dll</HintPath>
     </Reference>
+    <Reference Include="Rationals, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rationals.1.3.1\lib\net46\Rationals.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -65,6 +68,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BarsComputation.cs" />
     <Compile Include="DrillPageLayout.cs" />
     <Compile Include="Model\Drill.cs" />
     <Compile Include="Model\AnswerPerformance.cs" />
