--- a/Source/Gui/packages.config
+++ b/Source/Gui/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="morelinq" version="2.8.0" targetFramework="net461" />
   <package id="NAudio" version="1.8.3" targetFramework="net461" />
+  <package id="Rationals" version="1.3.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
