--- a/Source/Gui.Wpf/packages.config
+++ b/Source/Gui.Wpf/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="morelinq" version="2.9.0" targetFramework="net461" />
+  <package id="NAudio" version="1.8.3" targetFramework="net461" />
+  <package id="Rationals" version="1.3.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
