--- a/Source/Utility/Utility.csproj
+++ b/Source/Utility/Utility.csproj
@@ -43,16 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fluent\ArrayExtensions.cs" />
     <Compile Include="Combinator.cs" />
-    <Compile Include="DictionaryExtensions.cs" />
-    <Compile Include="DoubleExtensions.cs" />
-    <Compile Include="EnumerableExtensions.cs" />
+    <Compile Include="Fluent\DateTimeExtensions.cs" />
+    <Compile Include="Fluent\DictionaryExtensions.cs" />
+    <Compile Include="Fluent\DoubleExtensions.cs" />
+    <Compile Include="Fluent\EnumerableExtensions.cs" />
     <Compile Include="Hash.cs" />
-    <Compile Include="IntExtensions.cs" />
-    <Compile Include="NullableExtensions.cs" />
-    <Compile Include="ObjectExtensions.cs" />
+    <Compile Include="Fluent\IntExtensions.cs" />
+    <Compile Include="Fluent\NullableExtensions.cs" />
+    <Compile Include="Fluent\ObjectExtensions.cs" />
+    <Compile Include="ImageProcessing\BitmapBlender.cs" />
+    <Compile Include="ImageProcessing\PixelColor.cs" />
+    <Compile Include="ImageProcessing\PixelColors.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensions.cs" />
+    <Compile Include="Fluent\StringExtensions.cs" />
     <Compile Include="WeighedDistribution.cs" />
   </ItemGroup>
   <ItemGroup>
